--- a/package.json
+++ b/package.json
@@ -4,10 +4,11 @@
   "description": "backend for APIrest",
   "license": "ISC",
   "author": "RamosDev",
-  "type": "commonjs",
+  "type": "module",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "dev": "nodemon ./main.js"
   },
   "dependencies": {
     "dotenv": "^17.2.3",
